# gpu_bidirectional_raytracer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile.in  Makefile  README.md  REFACTORING_SUMMARY.md  camera.h  device.cu  displayfunc.c  docker-compose.yml  scene.h  smallptCPU.c
.devcontainer/: devcontainer.json
assets/scenes/: complex.scn  cornell.scn  cornell_3.scn  cornell_BL.scn  cornell_diff.scn  cornell_diff_soffusa.scn  cornell_multi.scn  hall_of_mirrors.scn  mod_cornell.scn  open.scn
include/: camera.h  cons.h  constants.h  cuda_utils.h  display_func.h  display_functions.h  displayfunc.h  geom.h  geometry.h  geometry_functions.h  geomfunc.h  log.h  mersenne_twister.h  render_context.h  render_utils.h  scene.h  simple_random.h  vec.h  vector_math.h
scenes/: caustic.scn  cornell_2luci.scn  cornell_diff_BL.scn  cornell_glass.scn  cornell_mirror.scn  cornell_mirror_reflect.scn  cornell_soffusa.scn  cornell_vetro.scn  gantz.scn  mod_cornell_diff.scn  simple2.scn
src/: MersenneTwister_kernel.cu  cuda_utils.cu  device.cu  device_cuda.cu  display_func.c  display_functions.c  display_functions.cpp  displayfunc.c  main.cu  main_window.cpp  main_window.h  path_tracer_kernels.cu  render_utils.cpp  rng_kernels.cu  smallptCPU.c  smallpt_cpu.c
tests/: README.md  run_tests.sh
